syntax = "proto3";

option java_package = "hofls.com.github.protobuf";
option java_outer_classname = "HelloWorldProto";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}
